--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost/advy
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-
+keycloak.auth-server-url=http://localhost:8180/auth
+keycloak.realm=advyProject
+keycloak.resource=springbootkeycloak
+keycloak.public-client=true
+keycloak.bearer-only=true
