ExceptionsManagement+ mappersUpdate commit

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>1.4.2.Final</version>
         </dependency>
         <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.3.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
@@ -78,15 +83,8 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>1.18.22</version>
-                        </exclude>
-                    </excludes>
-                </configuration>
+                <version>2.2.4.RELEASE</version>
+
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
