--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/advy
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+server.servlet.contextPath=/api/v1
 keycloak.auth-server-url=http://localhost:8180/auth
 keycloak.realm=advyProject
 keycloak.resource=springbootkeycloak
