ExceptionsManagement+ mappersUpdate commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ keycloak.realm=advyProject
 keycloak.resource=springbootkeycloak
 keycloak.public-client=true
 keycloak.bearer-only=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
