--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,10 @@
             <artifactId>keycloak-spring-boot-starter</artifactId>
             <version>18.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
