--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,19 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 server.servlet.contextPath=/api/v1
+
 keycloak.auth-server-url=http://localhost:8180/auth
 keycloak.realm=advyProject
 keycloak.resource=springbootkeycloak
 keycloak.public-client=true
 keycloak.bearer-only=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+assigneeId=753510000000139001
+departmentId=753510000000006907
+
+bucketName=data
+endpoint =http://127.0.0.1:9000
+port =9000
+accessKey =minioadmin
+secretKey =minioadmin
